Add Windows x64 (NSIS) packaging
Ship a Windows installer alongside the macOS .dmg, built by CI on release
tags with documented local build steps. Per-user NSIS setup.exe that
auto-installs WebView2.

- launcher/: new Rust crate spawning the bundled java.exe. Windows has no
  exec, so it can't be the JVM like the macOS launcher script; instead it
  inherits stdio (PHOTONIC_PORT/TOKEN handshake + stdin-EOF watchdog work
  unchanged) and ties java.exe to a KILL_ON_JOB_CLOSE Job Object so quitting
  can't orphan the backend.
- lib.rs: cfg(windows) resource paths for java.exe / exiftool.exe; updated
  the RunEvent::Exit comment for the launcher+job-object teardown path.
- tauri.windows.conf.json: NSIS target, per-user install, silent WebView2
  download bootstrapper (merged over tauri.conf.json on Windows).
- ExifToolService: pass file lists via a UTF-8 argfile (-@) with
  -charset filename=UTF8 in readBatch and extractPreviewJpeg. Fixes
  non-ASCII filenames across the Windows code page and the 32K command-line
  ceiling on large batches; cross-platform, no behavior change on unix.
- release.yml: v* tag -> draft GitHub Release. Windows job (jlink runtime,
  SHA256-pinned ExifTool, launcher, NSIS) and a macOS dmg job.
- Docs: README status + Windows packaging/SmartScreen/release notes,
  binaries + architecture Windows sections. .gitignore for the new
  staged/built Windows artifacts.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TChXcE5cyEEFGb3tVieBxh